src/test/resources/Parser/SyntaxErrors/BreakOutsideLoop.front
class Test:
    void test() {
        break;
    }